# egui_path_picker

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish.yml  static.yml
example/: Cargo.toml  README.md  index.html
example/src/: app.rs  main.rs
examples/: native.rs
src/: icon_provider.rs  lib.rs  path_picker.rs
