[package]
name = "egui_file_picker"
version = "0.1.0"
edition = "2024"
authors = ["TCA"]
description = "Simple egui widget for picking file paths "
readme = "README.md"
repository = "https://github.com/TCA166/egui_file_picker"
license = "GPL-3.0-only"

[dependencies]
egui = "0.32.1"

[lib]
name = "egui_file_picker"
path = "src/lib.rs"
