[package]
name = "egui_path_picker"
version = "0.2.0"
edition = "2024"
authors = ["TCA"]
description = "Simple egui widget for picking paths "
readme = "README.md"
repository = "https://github.com/TCA166/egui_file_picker"
license = "GPL-3.0-only"
keywords = ["egui", "egui-widget", "filesystem", "gui", "input"]
categories = ["gui"]

[dependencies]
egui = "0.32.1"

[workspace]
members = ["example"]

[lib]
name = "egui_path_picker"
path = "src/lib.rs"
